[package]
name = "ttyloop"
version = "0.1.0"
edition = "2021"

description = "Terminal clone of the mobile game Loop"
license = "MIT"
repository = "https://github.com/gamma-delta/ttyloop"
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aglet = "0.5.1"
fastrand = "2.0.1"
itertools = "0.12.0"

[target.'cfg(windows)'.dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]

[target.'cfg(unix)'.dependencies.cursive]
version = "0.20.0"